💄 fixed squished border-radius

--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,6 @@ svg.on {
 
 /* play and ? buttons */
 .left-buttons {
-  border-radius: 50%;
   box-shadow: var(--shadow);
   transition: all 0.2s ease-in;
 }
@@ -164,6 +163,7 @@ svg.on {
   line-height: 1em;
   width: 100px;
   height: 100px;
+  border-radius: 50px;
   position: absolute;
   top: 110px;
   left: 80px;
@@ -179,4 +179,5 @@ svg.on {
   left: 45px;
   width: 60px;
   height: 60px;
+  border-radius: 30px;
 }
